// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingSummaryItem renders correctly for negative rating 1`] = `
<SummaryItem
  title="rating"
>
  <Bubble
    color="primary"
    ghost={true}
    iconId="thumbsDown"
    iconSize={12}
  />
</SummaryItem>
`;

exports[`RatingSummaryItem renders correctly for positive rating 1`] = `
<SummaryItem
  title="rating"
>
  <Bubble
    color="primary"
    ghost={true}
    iconId="thumbsUp"
    iconSize={12}
  />
</SummaryItem>
`;
